<resources>
    <string name="app_name">PowerEagle</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_belum_punya_akun__sign_up_string">Belum punya akun? Sign Up</string>
    <string name="login_string">LOGIN</string>
    <string name="username___string">USERNAME :</string>
    <string name="password___string">PASSWORD :</string>
    <string name="login_ek1_string">Login</string>
    <string name="sudah_punya_akun__login_string">Sudah punya akun? Login</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="email___string">Email :</string>
    <string name="re_password___string">Re-Password :</string>
    <string name="sign_up_ek1_string">Sign Up</string>
    <string name="menu_string">Menu</string>
    <string name="informasi_club_string">informasi club</string>
    <string name="petunjuk_string">petunjuk</string>
    <string name="pendaftaran_string">pendaftaran</string>
    <string name="informasi_club_ek3_string">Informasi Club</string>
    <string name="power_eagle_fc_string">POWER EAGLE FC</string>
    <string name="geovani_ferdian_string">Geovani Ferdian</string>
    <string name="coach_string">COACH</string>
    <string name="stadion_sialang_gaung_string">STADION SIALANG GAUNG</string>
    <string name="umar_abdul_aziz_hp__085158980026_string">Umar Abdul Aziz Hp. 085158980026</string>
    <string name="admin_string">ADMIN</string>
    <string name="_15_00_wib_16_00_wib_16_00_wib_08_00_wib_string">15.00 WIB16.00 WIB16.00 WIB08.00 WIB</string>
    <string name="senin_rabu_sabtu_minggu_string">SeninRabuSabtuMinggu</string>
    <string name="jadwal_latihan_string">JADWAL LATIHAN</string>
    <string name="petunjuk_ek3_string">PETUNJUK</string>
    <string name="text_string">1.	Silahkan buka informasi club ,untuk mengetahui tentang informasi club</string>
    <string name="text_ek1_string">2.	Langkah pertama silahkan klik tombol Pendaftaran Lalu anda akan melakukan pembayaran terlebih dahulu , pada bagian diatas ada informasi no rek dan nominal pembayaran.</string>
    <string name="text_ek2_string">3.	Setelah itu isi data pembayaran ,jika anda sudah membayar maka anda bisa mengisi data bukti pembayaran dalam bentuk png atau gambar.</string>
    <string name="text_ek3_string">4.	Selanjutnya print bukti pembayaran karna penting, lalu lanjut ke daftar untuk mengisi pendaftaran lalu print juga bukti pendaftaran</string>
    <string name="text_ek4_string">5.	Setelah berhasil data anda akan dibaca admin dan tunggu informasi jadwal seleksi lewat no telp anda lalu pada saat seleksi tunjukan print pendaftaran.</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="nama">Nama</string>
    <string name="idbayar">ID Pembayaran</string>
    <string name="noktp">NO KTP</string>
    <string name="tggl">Tanggal Pembayaran</string>
    <string name="buki">Bukti Transfer</string>
    <string name="selamat">SELAMAT,   PEMBAYARAN BERHASIL!</string>
    <string name="instruksi">Silahkan Print dan Next Ke Daftar</string>
    <string name="send">Send</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="nopendaftar">No Pendaftaran</string>
    <string name="nohp">No HP</string>
    <string name="tgldaftar">Tanggal Pendaftaran</string>
    <string name="posisi">Posisi Pemain</string>
    <string name="sertif">Upload sertifikat</string>
    <string name="selamatdftr">SELAMAT,PENDAFTARAN ANDA BERHASIL</string>
    <string name="Silatunggu">Silahkan tunggu pemberitahuan SMS dari admin untuk jadwal seleksi dan bawa bukti pendaftaran !!</string>
</resources>