<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pendaftaran">

    <ImageView android:id="@+id/ozil_1"
        android:src="@drawable/ozil_1"
        android:contentDescription="background_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <View   android:id="@+id/_bg__login_page_ek2"
        android:background="@drawable/_bg__login_page_ek2_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.8"
        />
    <TextView android:id="@+id/textpendaftaran"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/merah1"
        android:layout_width="305dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:text="@string/pendaftaran"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/rectangle_1"
        android:background="@drawable/rectangle_2_shape"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textpendaftaran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText   android:id="@+id/kotakemail"
        android:background="@drawable/rectangle_2_shape"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/merah2"
        android:layout_width="130dp"
        android:layout_height="23.6dp"
        android:text="@string/noktp"
        app:layout_constraintBottom_toTopOf="@id/kotakemail"
        app:layout_constraintStart_toStartOf="@id/kotakemail"/>

    />

    <EditText
        android:id="@+id/rectangle_2"
        android:background="@drawable/rectangle_2_shape"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/kotakemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText   android:id="@+id/kotakrepas"
        android:background="@drawable/rectangle_2_shape"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/tgldaftar"
        android:background="@drawable/rectangle_2_shape"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/kotakrepas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/tgl"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="170dp"
        android:layout_height="23.6dp"
        android:text="@string/tgldaftar"
        app:layout_constraintBottom_toTopOf="@id/tgldaftar"
        app:layout_constraintStart_toStartOf="@id/tgldaftar"/>

    <EditText
        android:id="@+id/posisi"
        android:background="@drawable/rectangle_2_shape"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tgldaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/textposisi"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="170dp"
        android:layout_height="23.6dp"
        android:text="@string/posisi"
        app:layout_constraintBottom_toTopOf="@id/posisi"
        app:layout_constraintStart_toStartOf="@id/posisi"/>


    <TextView android:id="@+id/repas"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="170dp"
        android:layout_height="23.6dp"
        android:text="@string/nohp"
        app:layout_constraintBottom_toTopOf="@id/kotakrepas"
        app:layout_constraintStart_toStartOf="@id/kotakrepas"/>


    <TextView android:id="@+id/username__"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="114.6dp"
        android:layout_height="23.6dp"
        android:text="@string/nama"
        app:layout_constraintBottom_toTopOf="@id/rectangle_1"
        app:layout_constraintStart_toStartOf="@id/rectangle_1"/>

    <TextView android:id="@+id/password__"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="116.6dp"
        android:layout_height="23.6dp"
        android:text="@string/nopendaftar"
        app:layout_constraintBottom_toTopOf="@id/rectangle_2"
        app:layout_constraintStart_toStartOf="@id/rectangle_2"/>

    <ImageView
        android:id="@+id/upgambar"
        android:background="@drawable/rectangle_2_shape"
        android:layout_marginTop="50dp"
        android:layout_width="85dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/posisi"
        app:layout_constraintStart_toStartOf="@id/posisi"
        android:src="@drawable/upload"
        />
    <TextView android:id="@+id/up"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="170dp"
        android:layout_height="23.6dp"
        android:text="@string/sertif"
        app:layout_constraintBottom_toTopOf="@id/upgambar"
        app:layout_constraintStart_toStartOf="@id/upgambar"/>

    <View
        android:id="@+id/senddaftar"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/_bg___frame_1_ek1_shape"
        app:layout_constraintTop_toBottomOf="@id/upgambar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView android:id="@+id/send"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_width="60dp"
        android:layout_height="36.4dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@id/senddaftar"
        app:layout_constraintStart_toStartOf="@id/senddaftar"
        app:layout_constraintTop_toTopOf="@id/senddaftar"
        app:layout_constraintEnd_toEndOf="@id/senddaftar"/>

</androidx.constraintlayout.widget.ConstraintLayout>