<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <View   android:id="@+id/_bg__login_page_ek2"
        android:background="@drawable/_bg__login_page_ek2_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView android:id="@+id/burung_zix"
        android:src="@drawable/burung_zix"
        android:contentDescription="burung_zix"
        android:layout_width="430dp"
        android:layout_height="359dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView android:id="@+id/inilogin"
        android:textSize="15sp"
        android:textColor="@color/merah1"
        android:layout_width="212.5dp"
        android:layout_height="22.5dp"
        android:text="@string/_belum_punya_akun__sign_up_string"
       android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView android:id="@+id/login"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/merah1"
        android:layout_width="94.4dp"
        android:layout_height="36.4dp"
        android:text="@string/login_string"
        app:layout_constraintTop_toBottomOf="@id/burung_zix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText   android:id="@+id/kolomusername"
        android:background="@drawable/rectangle_2_shape"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText   android:id="@+id/pw"
        android:background="@drawable/rectangle_2_shape"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/kolomusername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/username__"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"
        android:layout_width="114.6dp"
        android:layout_height="23.6dp"
        android:text="@string/username___string"
        app:layout_constraintBottom_toTopOf="@id/kolomusername"
        app:layout_constraintStart_toStartOf="@id/kolomusername"/>

    <TextView android:id="@+id/password__"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah2"

        android:layout_width="116.6dp"
        android:layout_height="23.6dp"
        android:text="@string/password___string"
        app:layout_constraintBottom_toTopOf="@id/pw"
        app:layout_constraintStart_toStartOf="@id/pw"/>

    />

    <View
        android:id="@+id/btnlogin"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/_bg___frame_1_ek1_shape"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView android:id="@+id/login_ek1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_width="80dp"
        android:layout_height="36.4dp"
        android:text="@string/login_ek1_string"
        app:layout_constraintBottom_toBottomOf="@id/btnlogin"
        app:layout_constraintStart_toStartOf="@id/btnlogin"
        app:layout_constraintTop_toTopOf="@id/btnlogin"
        app:layout_constraintEnd_toEndOf="@id/btnlogin"


        />

</androidx.constraintlayout.widget.ConstraintLayout>