<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Petunjuk">
    <ImageView android:id="@+id/ozil_1"
        android:src="@drawable/ozil_1"
        android:contentDescription="background_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <View   android:id="@+id/_bg__menu_utama_ek2"
        android:background="@drawable/_bg__menu_utama_ek2_shape"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:alpha="0.79"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView android:id="@+id/button_back1"
        android:src="@drawable/desain_tanpa_judul__4__1"
        android:contentDescription="desain_tanpa_judul__4__1"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/petunjuk"
        android:layout_width="237dp"
        android:layout_height="71dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ptunjuk"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <View   android:id="@+id/rectangle_7"
        android:background="@drawable/rectangle_7_shape"
        android:alpha="0.80000001192093"
        android:layout_marginTop="40dp"
        android:layout_width="349dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/petunjuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View   android:id="@+id/rectangle_8"
        android:background="@drawable/rectangle_7_shape"
        android:alpha="0.80000001192093"
        android:layout_marginTop="50dp"
        android:layout_width="349dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:text="@string/text_string"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_7"
        app:layout_constraintStart_toStartOf="@id/rectangle_7"
        app:layout_constraintTop_toTopOf="@id/rectangle_7" />

    <View   android:id="@+id/rectangle_9"
        android:background="@drawable/rectangle_7_shape"
        android:alpha="0.80000001192093"
        android:layout_marginTop="50dp"
        android:layout_width="349dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView android:id="@+id/text_ek1"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:layout_width="343dp"
        android:layout_height="101dp"
        android:text="@string/text_ek1_string"
        app:layout_constraintTop_toTopOf="@id/rectangle_8"
        app:layout_constraintStart_toStartOf="@id/rectangle_8"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_8"
        />

    <View   android:id="@+id/rectangle_10"
        android:background="@drawable/rectangle_7_shape"
        android:alpha="0.80000001192093"
        android:layout_marginTop="50dp"
        android:layout_width="349dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/text_ek2"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:layout_width="343dp"
        android:layout_height="101dp"
        android:text="@string/text_ek2_string"
        app:layout_constraintTop_toTopOf="@id/rectangle_9"
        app:layout_constraintStart_toStartOf="@id/rectangle_9"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_9"
        />

    <TextView android:id="@+id/text_ek3"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:layout_width="343dp"
        android:layout_height="101dp"
        android:text="@string/text_ek3_string"
        app:layout_constraintTop_toTopOf="@id/rectangle_10"
        app:layout_constraintStart_toStartOf="@id/rectangle_10"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_10"
        />

    <View   android:id="@+id/rectangle_11"
        android:background="@drawable/rectangle_7_shape"
        android:alpha="0.80000001192093"

        android:layout_marginTop="50dp"
        android:layout_width="349dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/text_ek4"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:layout_width="343dp"
        android:layout_height="101dp"
        android:text="@string/text_ek4_string"
        app:layout_constraintTop_toTopOf="@id/rectangle_11"
        app:layout_constraintStart_toStartOf="@id/rectangle_11"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_11"
        />

</androidx.constraintlayout.widget.ConstraintLayout>