<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuUtama">

    <ImageView android:id="@+id/ozil_1"
        android:src="@drawable/ozil_1"
        android:contentDescription="background_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <View   android:id="@+id/_bg__menu_utama_ek2"
        android:background="@drawable/_bg__menu_utama_ek2_shape"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:alpha="0.79"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView android:id="@+id/burung_zix"
        android:src="@drawable/burung_zix"
        android:contentDescription="burung_zix"
        android:layout_width="430dp"
        android:layout_height="359dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <View   android:id="@+id/rectangle_6"
        android:background="@drawable/rectangle_6_shape"
        android:alpha="0.69999998807907"
        android:layout_width="384dp"
        android:layout_height="400dp"
        android:layout_marginTop="-200dp"
        app:layout_constraintTop_toBottomOf="@id/burung_zix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/menu"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/coklat"
        android:layout_width="87.4dp"
        android:layout_height="36.4dp"
        android:text="@string/menu_string"
        app:layout_constraintTop_toTopOf="@id/rectangle_6"
        app:layout_constraintStart_toStartOf="@id/rectangle_6"
        app:layout_constraintEnd_toEndOf="@id/rectangle_6"/>

    <ImageView android:id="@+id/_rectangle_informasiclub"
        android:src="@drawable/rectangle_2_shape"
        android:contentDescription="_rectangle_1"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView android:id="@+id/_rectangle_petunjuk"
        android:src="@drawable/rectangle_2_shape"
        android:contentDescription="_rectangle_2"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/_rectangle_informasiclub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/informasi_club"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/merah3"
        android:layout_width="121dp"
        android:layout_height="19dp"
        android:text="@string/informasi_club_string"
        android:layout_marginBottom="10dp"

        app:layout_constraintStart_toStartOf="@id/_rectangle_informasiclub"
        app:layout_constraintEnd_toEndOf="@id/_rectangle_informasiclub"
        app:layout_constraintBottom_toBottomOf="@id/_rectangle_informasiclub"
        />


    <TextView android:id="@+id/petunjuk"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah3"
        android:layout_width="85.6dp"
        android:layout_height="20dp"
        android:text="@string/petunjuk_string"
        app:layout_constraintStart_toStartOf="@id/_rectangle_petunjuk"
        app:layout_constraintEnd_toEndOf="@id/_rectangle_petunjuk"
        app:layout_constraintTop_toTopOf="@id/_rectangle_petunjuk"
        app:layout_constraintBottom_toBottomOf="@id/_rectangle_petunjuk"
        />

    <ImageView android:id="@+id/_rectangle_pendaftaran"
        android:src="@drawable/rectangle_2_shape"
        android:contentDescription="_rectangle_3"
        android:layout_marginTop="50dp"
        android:layout_width="255dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/_rectangle_petunjuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
        />

    <TextView android:id="@+id/pendaftaran"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/merah3"
        android:layout_width="105dp"
        android:layout_height="23.6dp"
        android:text="@string/pendaftaran_string"
        app:layout_constraintTop_toTopOf="@id/_rectangle_pendaftaran"
        app:layout_constraintStart_toStartOf="@id/_rectangle_pendaftaran"
        app:layout_constraintEnd_toEndOf="@id/_rectangle_pendaftaran"
        app:layout_constraintBottom_toBottomOf="@id/_rectangle_pendaftaran"
        />

</androidx.constraintlayout.widget.ConstraintLayout>